--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>YEEYQI</h1>
-									<p>Senior Astral Projectionist</p>
+									<p>春秋大夢董事長</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/IMG_4369.JPG" alt="" />
 								</a>
 							</article>
 
@@ -48,22 +48,22 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="chat/index.html" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="chat/index.html" class="image fit"><img src="images/image01.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="boxmodel/intdex.html" class="image fit"><img src="images/image02.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="HelloHTML/index.html" class="image fit"><img src="images/image03.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="html/index.html" class="image fit"><img src="images/image04.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="wheel/index.html" class="image fit"><img src="images/image05.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="RandomSelector/index.html" class="image fit"><img src="images/image06.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
@@ -75,7 +75,7 @@
 											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a href="wheel/index.html" class="image fit"><img src="images/pic10.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
